Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32753

Spider engine does not load in ORACLE mode

    XMLWordPrintable

Details

    Description

      Spider does not load if the server is running with sql_mode=ORACLE.

      It is true both when the server is started in ORACLE mode and plugin-load-add=ha_spider or when they are set/loaded at runtime.

      I didn't check, but it must have started around the same time as other similar issues, with MDEV-27095 and further fixes.

      bb-10.10-release 04d9a46c41b36b61057741abddf7840962e76893

      [ERROR] SPIDER plugin initialization failed at 'if @win_plugin = 0 then  begin not atomic    declare exit handler for 1041, 1123      replace into mysql.func values        ('spider_direct_sql', 2, 'ha_spider.so', 'function'),        ('spider_bg_direct_sql', 2, 'ha_spider.so', 'aggregate'),        ('spider_ping_table', 2, 'ha_spider.so', 'function'),        ('spider_copy_tables', 2, 'ha_spider.so', 'function'),        ('spider_flush_table_mon_cache', 2, 'ha_spider.so', 'function');    create function if not exists spider_direct_sql returns int      soname 'ha_spider.so';    create aggregate function if not exists spider_bg_direct_sql returns int      soname 'ha_spider.so';    create function if not exists spider_ping_table returns int      soname 'ha_spider.so';    create function if not exists spider_copy_tables returns int      soname 'ha_spider.so';    create function if not exists spider_flush_table_mon_cache returns int      soname 'ha_spider.so';  end;else  begin not atomic    declare exit handler for 1041, 1123      replace into mysql.func values        ('spider_direct_sql', 2, 'ha_spider.dll', 'function'),        ('spider_bg_direct_sql', 2, 'ha_spider.dll', 'aggregate'),        ('spider_ping_table', 2, 'ha_spider.dll', 'function'),        ('spider_copy_tables', 2, 'ha_spider.dll', 'function'),        ('spider_flush_table_mon_cache', 2, 'ha_spider.dll', 'function');    create function if not exists spider_direct_sql returns int      soname 'ha_spider.dll';    create aggregate function if not exists spider_bg_direct_sql returns int      soname 'ha_spider.dll';    create function if not exists spider_ping_table returns int      soname 'ha_spider.dll';    create function if not exists spider_copy_tables returns int      soname 'ha_spider.dll';    create function if not exists spider_flush_table_mon_cache returns int      soname 'ha_spider.dll';  end;end if;' by 'You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near 'create function if not exists spider_direct_sql returns int      soname 'ha_s...' at line 1'
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.15h
                  6.15h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.